; ModuleID = '/home/carl/AnghaBench/linux/drivers/base/regmap/extr_regmap.c_regmap_field_alloc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/base/regmap/extr_regmap.c_regmap_field_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regmap_field = type { i32 }
%struct.regmap = type { i32 }
%struct.reg_field = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.regmap_field* @regmap_field_alloc(%struct.regmap* %0, i32 %1) #0 {
  %3 = alloca %struct.regmap_field*, align 8
  %4 = alloca %struct.reg_field, align 4
  %5 = alloca %struct.regmap*, align 8
  %6 = alloca %struct.regmap_field*, align 8
  %7 = getelementptr inbounds %struct.reg_field, %struct.reg_field* %4, i32 0, i32 0
  store i32 %1, i32* %7, align 4
  store %struct.regmap* %0, %struct.regmap** %5, align 8
  %8 = load i32, i32* @GFP_KERNEL, align 4
  %9 = call %struct.regmap_field* @kzalloc(i32 4, i32 %8)
  store %struct.regmap_field* %9, %struct.regmap_field** %6, align 8
  %10 = load %struct.regmap_field*, %struct.regmap_field** %6, align 8
  %11 = icmp ne %struct.regmap_field* %10, null
  br i1 %11, label %16, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @ENOMEM, align 4
  %14 = sub nsw i32 0, %13
  %15 = call %struct.regmap_field* @ERR_PTR(i32 %14)
  store %struct.regmap_field* %15, %struct.regmap_field** %3, align 8
  br label %23

16:                                               ; preds = %2
  %17 = load %struct.regmap_field*, %struct.regmap_field** %6, align 8
  %18 = load %struct.regmap*, %struct.regmap** %5, align 8
  %19 = getelementptr inbounds %struct.reg_field, %struct.reg_field* %4, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @regmap_field_init(%struct.regmap_field* %17, %struct.regmap* %18, i32 %20)
  %22 = load %struct.regmap_field*, %struct.regmap_field** %6, align 8
  store %struct.regmap_field* %22, %struct.regmap_field** %3, align 8
  br label %23

23:                                               ; preds = %16, %12
  %24 = load %struct.regmap_field*, %struct.regmap_field** %3, align 8
  ret %struct.regmap_field* %24
}

declare dso_local %struct.regmap_field* @kzalloc(i32, i32) #1

declare dso_local %struct.regmap_field* @ERR_PTR(i32) #1

declare dso_local i32 @regmap_field_init(%struct.regmap_field*, %struct.regmap*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
